--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
-    <h1>Titre de ma page</h1>
+    <header class="header">
+      <div class="header__topBar">
+        <div class="container">
+          <img src="images/logo.png" alt="logo">
+          <h1>Good inc.</h1>
+        </div>
+      </div>
+      <div class="header__navigation">
+        <div class="container">
+          <ul class="header__navigation__menu">
+            <li><a href="#" title="Item 1"><img src="images/acceuil.png" alt="Accueil"></a></li>
+            <li><a href="#" title="Item 1">Portfolio</a></li>
+            <li><a href="#" title="Item 1">Services</a></li>
+            <li><a href="#" title="Item 1">Staff</a></li>
+            <li><a href="#" title="Item 1">Articles</a></li>
+            <li><a href="#" title="Item 1">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
