--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="header__navigation">
         <div class="container">
           <ul class="header__navigation__menu">
-            <li><a href="#" title="Item 1"><img src="images/acceuil.png" alt="Accueil"></a></li>
+            <li><a href="#" title="Item 1"><img src="images/accueil.png" alt="Accueil"></a></li>
             <li><a href="#" title="Item 1">Portfolio</a></li>
             <li><a href="#" title="Item 1">Services</a></li>
             <li><a href="#" title="Item 1">Staff</a></li>
